--- a/myfirstjudocompetition.html
+++ b/myfirstjudocompetition.html
@@ -1,1 +1,161 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your First Judo Competition: A Guide</title>
+    <!--CSS style sheet-->
+    <link href="style.css" rel="stylesheet">
+    <link href="alternativestyle2.css" rel="stylesheet">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!--NAV BAR AND LOGO-->
+    <div class="wrapper">
+        <nav class="navbar">
+            <div class="navbar-container container">
+                <input type="checkbox" name="" id="">
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <ul class="menu-items">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="meettheteam.html">Instructors</a></li>
+                    <li><a href="membership.html">Schedule</a></li>
+                    <li><a href="payment.html">Registration</a></li>
+                    <li><a href="photosvideos.html">Media</a></li>
+                    <li><a href="contactus.html">Contact us</a></li>
+                    <div id="google_translate_element"></div>
+                    <script type="text/javascript">
+                        function googleTranslateElementInit() {
+                            new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+                        }
+                    </script>
+                    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+                </ul>
+                <h1 class="logo">Restigouche Dojo</h1>
+            </div>
+        </nav>
+    </div>
+
+    <!--BANNER-->
+    <div class="banner-area">
+        <img src="" alt="" class="">
+    </div>
+    
+    <!--CONTENT-->
+    <div class="content-area">
+        <div class="wrapper-body">
+            <select id="language-selection">
+                <option value="en">English</option>
+                <option value="fr">Français</option>
+            </select>
+            <section class="hero">
+                <div class="container">
+                    <h2 id="title">Your First Judo Competition: A Guide for Restigouche Dojo Athletes</h2>
+                    <p id="program-description">
+                        Welcome, Restigouche Dojo Judokas! Embarking on your first Judo competition is a significant milestone in your Judo journey. It’s an opportunity to test your skills, experience the thrill of competition, and grow as a martial artist. This guide will help you prepare both physically and mentally for your debut on the mat.
+                    </p>
+                </div>
+            </section>
+            <section class="guide">
+                <div class="container">
+                    <h2 id="guide-title">Competition Preparation Guide</h2>
+                    
+                    <h3 id="define-objectives">1. Define Your Objectives</h3>
+                    <p id="define-objectives-text">Before you step onto the mat, clarify your goals. Whether it’s to test your techniques, gain competitive experience, or push your limits, having a clear objective will help guide your preparation.</p>
+
+                    <h3 id="create-game-plan">2. Create a Game Plan</h3>
+                    <p id="create-game-plan-text">
+                        A solid game plan is crucial for success in Judo. This plan should outline how you’ll approach each match, considering the following:
+                        <ul>
+                            <li id="attacks"><strong>Attacks:</strong> Choose your primary throws (e.g., O-Soto-Gari, Ippon-Seoi-Nage) and know them well. Have a few backup techniques ready.</li>
+                            <li id="groundwork"><strong>Groundwork:</strong> Be prepared for Ne-Waza (groundwork). Know your favorite pins (e.g., Kesa-Gatame, Yoko-Shiho-Gatame) and submissions (e.g., Juji-Gatame).</li>
+                            <li id="defense"><strong>Defense:</strong> Have strategies for defending against common attacks and recovering from poor positions.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="training">3. Training for Competition</h3>
+                    <p id="training-text">
+                        Consistency and smart training are key to preparing for a Judo competition.
+                        <ul>
+                            <li id="technical-drills"><strong>Technical Drills:</strong> Focus on perfecting your throwing techniques and transitions. Repeated practice builds muscle memory.</li>
+                            <li id="randori"><strong>Randori (Sparring):</strong> Engage in randori with partners of different skill levels and sizes to simulate match conditions.</li>
+                            <li id="conditioning"><strong>Conditioning:</strong> Incorporate strength, speed, and agility training. Exercises like sprinting, plyometrics, and core workouts will enhance your performance.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="mental-preparation">4. Mental Preparation</h3>
+                    <p id="mental-preparation-text">
+                        The mental aspect of Judo is as important as the physical.
+                        <ul>
+                            <li id="stay-calm"><strong>Stay Calm:</strong> Learn to manage pre-competition nerves. Practice deep breathing: inhale through your nose for four seconds and exhale through your mouth for eight seconds.</li>
+                            <li id="visualization"><strong>Visualization:</strong> Imagine your matches in your mind. Picture yourself executing throws, defending, and reacting to different situations. Always visualize positive outcomes.</li>
+                            <li id="positive-self-talk"><strong>Positive Self-Talk:</strong> Use affirmations to build confidence. Remind yourself of your training and strengths.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="understand-rules">5. Understand the Rules</h3>
+                    <p id="understand-rules-text">
+                        Familiarize yourself with Judo competition rules to avoid penalties and maximize your scoring potential.
+                        <ul>
+                            <li id="scoring"><strong>Scoring:</strong> Understand how points are awarded for throws, holds, and submissions. Ippon (full point) wins the match, while Waza-Ari (half point) can lead to an eventual victory if accumulated.</li>
+                            <li id="penalties"><strong>Penalties:</strong> Learn about the penalties (Shido) for rules infractions. Avoid actions that lead to penalties, such as gripping violations or stalling.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="gear-uniform">6. Gear and Uniform</h3>
+                    <p id="gear-uniform-text">
+                        Ensure you have the proper gear:
+                        <ul>
+                            <li id="gi"><strong>Gi (Judogi):</strong> Your gi should be clean, in good condition, and meet the competition’s specifications. Make sure it fits properly.</li>
+                            <li id="belt"><strong>Belt:</strong> Wear a belt that corresponds to your rank.</li>
+                            <li id="extras"><strong>Extras:</strong> Bring a spare gi, water, snacks, and personal items you might need.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="warm-up">7. Warm-Up Effectively</h3>
+                    <p id="warm-up-text">
+                        A good warm-up prepares both your body and mind.
+                        <ul>
+                            <li id="routine"><strong>Routine:</strong> Perform a familiar warm-up routine to get your muscles ready and calm your nerves. Include dynamic stretches and light randori.</li>
+                            <li id="focus"><strong>Focus:</strong> Concentrate on your warm-up, not on the upcoming match. Familiar movements help ground you.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="nutrition-hydration">8. Nutrition and Hydration</h3>
+                    <p id="nutrition-hydration-text">
+                        Proper nutrition and hydration are crucial for optimal performance.
+                        <ul>
+                            <li id="hydrate"><strong>Hydrate:</strong> Drink plenty of water before and on the day of the competition.</li>
+                            <li id="eat-well"><strong>Eat Well:</strong> Have a balanced diet rich in proteins, carbohydrates, and healthy fats. On competition day, opt for light, easily digestible foods.</li>
+                        </ul>
+                    </p>
+
+                    <h3 id="competition-day">9. On Competition Day</h3>
+                    <p id="competition-day-text">
+                        - <strong>Arrive Early:</strong> Give yourself ample time to check in, warm up, and get settled.<br>
+                        - <strong>Stay Focused:</strong> Use your breathing techniques and visualization to stay calm and centered.<br>
+                        - <strong>Execute Your Plan:</strong> Trust your preparation and follow your game plan.
+                    </p>
+
+                    <h3 id="post-competition">10. Post-Competition Reflection</h3>
+                    <p id="post-competition-text">
+                        Reflect on your performance to identify areas for improvement.
+                        <ul>
+                            <li id="seek-feedback"><strong>Seek Feedback:</strong> Ask your coach and teammates for constructive feedback. Learn from your matches and training.</li>
+                            <li id="reflect-experience"><strong>Reflect on Experience:</strong> Consider what went well and what could be improved. Use this insight to guide future training.</li>
+                        </ul>
+                    </p>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!--SCRIPT-->
+    <script src="JS/script4.js"></script>
+</body>
+</html>
 
