--- a/myfirstjudocompetition.html
+++ b/myfirstjudocompetition.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -158,4 +159,3 @@
     <script src="JS/script5.js"></script>
 </body>
 </html>
-
