--- a/myfirstjudocompetition.html
+++ b/myfirstjudocompetition.html
@@ -51,7 +51,7 @@
 
     <!-- BANNER -->
     <div class="banner-area">
-        <img src="" alt="Banner Image" class="">
+        <img src="" alt="" class="">
     </div>
     
     <!-- CONTENT -->
