--- a/achievementsmeg.html
+++ b/achievementsmeg.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instructors</title>
+    <title>Achievement- Megan Raymond</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="achievements.css" rel="stylesheet">
