--- a/parentsguide.html
+++ b/parentsguide.html
@@ -120,5 +120,12 @@
             </section>
         </div>
     </div>
+    <!-- Language Selection -->
+    <select id="language-selection">
+        <option value="en">English</option>
+        <option value="fr">French</option>
+    </select>
+    <!-- JavaScript -->
+    <script src="script6.js"></script>
 </body>
 </html>
