--- a/parentsguide.html
+++ b/parentsguide.html
@@ -126,6 +126,6 @@
         <option value="fr">French</option>
     </select>
     <!-- JavaScript -->
-    <script src="script6.js"></script>
+    <script src="JS/script6.js"></script>
 </body>
 </html>
