--- a/parentsguide.html
+++ b/parentsguide.html
@@ -46,6 +46,12 @@
     <!-- CONTENT -->
     <div class="content-area">
         <div class="wrapper-body">
+            <!-- Language Selection -->
+            <select id="language-selection">
+                <option value="en">English</option>
+                <option value="fr">Français</option>
+            </select>
+
             <!-- Hero Section -->
             <section class="hero">
                 <div class="container">
@@ -120,11 +126,7 @@
             </section>
         </div>
     </div>
-    <!-- Language Selection -->
-    <select id="language-selection">
-        <option value="en">English</option>
-        <option value="fr">French</option>
-    </select>
+
     <!-- JavaScript -->
     <script src="JS/script6.js"></script>
 </body>
