--- a/parentsguide.html
+++ b/parentsguide.html
@@ -59,74 +59,78 @@
                 </div>
             </section>
 
-            <!-- Guide Content -->
+                        <!-- Guide Content -->
             <section class="guide">
                 <div class="container">
-                    <h3 id="chapter1">Chapter 1: You're Part of the Team</h3>
-                    <p>
+                    <h3 id="role-in-team">Chapter 1: You're Part of the Team</h3>
+                    <p id="role-in-team-text">
                         Welcome to Restigouche Dojo, where your child is not just a student but a member of our martial arts family. As a parent, you play a vital role in this community. Your support, encouragement, and involvement are key components of your child's success and enjoyment at our dojo.
                     </p>
-                    <p>
+                    <p id="program-description">
                         Just like in any team, everyone has a role to play. Your presence at practices and competitions shows your child that you are invested in their martial arts journey. Your words of encouragement and praise boost their confidence and motivation. Your understanding and support during both victories and setbacks help them navigate the ups and downs of training and competing.
                     </p>
-                    <p>
+                    <p id="role-in-team-text-2">
                         At Restigouche Dojo, we believe in the power of teamwork, and that includes parents. By being actively engaged in your child's martial arts experience, you not only enhance their performance but also contribute to the positive atmosphere and sense of community within our dojo.
                     </p>
 
-                    <h3 id="chapter2">Chapter 2: Avoiding Common Mistakes</h3>
-                    <p>
+                    <h3 id="avoid-common-mistakes">Chapter 2: Avoiding Common Mistakes</h3>
+                    <p id="avoid-common-mistakes-text">
                         As parents, we all want the best for our children, but sometimes our good intentions can unintentionally lead to common mistakes. At Restigouche Dojo, we want to help you avoid these pitfalls so that you can support your child effectively.
                     </p>
-                    <p>
+                    <p id="avoid-common-mistakes-text-2">
                         One common mistake is placing too much emphasis on outcomes, such as winning competitions, rather than focusing on the process of growth and development. While success is important, it's equally essential to celebrate the journey, the effort, and the lessons learned along the way.
                     </p>
-                    <p>
+                    <p id="avoid-common-mistakes-text-3">
                         Another mistake is projecting our own desires and expectations onto our children. It's essential to remember that your child's martial arts journey is theirs alone. Encourage them to set their own goals, pursue their passions, and find joy in their achievements, no matter how big or small.
                     </p>
-                    <p>
+                    <p id="avoid-common-mistakes-text-4">
                         By avoiding these common mistakes and adopting a supportive and nurturing approach, you can help your child thrive at Restigouche Dojo and beyond.
                     </p>
 
-                    <h3 id="chapter3">Chapter 3: Building Self-Esteem</h3>
-                    <p>
+                    <h3 id="boost-self-esteem">Chapter 3: Building Self-Esteem</h3>
+                    <p id="boost-self-esteem-text">
                         Self-esteem is a fundamental aspect of a child's well-being and success in martial arts. At Restigouche Dojo, we strive to foster a supportive and empowering environment where every child feels valued and confident.
                     </p>
-                    <p>
+                    <p id="boost-self-esteem-text-2">
                         One way parents can contribute to building their child's self-esteem is by offering genuine praise and encouragement. Acknowledge their efforts, celebrate their progress, and highlight their strengths. By focusing on their positive qualities and accomplishments, you help reinforce their self-worth and confidence.
                     </p>
-                    <p>
+                    <p id="boost-self-esteem-text-3">
                         Additionally, it's essential to provide a safe space for your child to express themselves and explore their abilities without fear of judgment or criticism. Encourage them to embrace challenges, learn from mistakes, and believe in their potential. By instilling a growth mindset and resilience, you equip them with the tools they need to overcome obstacles and thrive in martial arts and in life.
                     </p>
 
-                    <h3 id="chapter4">Chapter 4: Recognizing Tank Drainers</h3>
-                    <p>
+                    <h3 id="recognize-energy-drainers">Chapter 4: Recognizing Tank Drainers</h3>
+                    <p id="recognize-energy-drainers-text">
                         In our efforts to support our children, we must be mindful of behaviors and attitudes that may inadvertently undermine their confidence and enthusiasm for martial arts. At Restigouche Dojo, we call these "tank drainers" – actions or comments that drain your child's emotional tank and diminish their motivation.
                     </p>
-                    <p>
+                    <p id="recognize-energy-drainers-text-2">
                         Tank drainers can take many forms, such as overly focusing on winning at all costs, setting unrealistic expectations, or criticizing their performance harshly. These negative interactions can erode your child's self-esteem, dampen their enjoyment of martial arts, and even lead to burnout or dropout.
                     </p>
-                    <p>
+                    <p id="recognize-energy-drainers-text-3">
                         By recognizing and eliminating tank drainers from your interactions with your child, you create a more positive and supportive environment at Restigouche Dojo. Together, we can ensure that every child feels valued, respected, and empowered to reach their full potential.
                     </p>
 
-                    <h3 id="chapter5">Chapter 5: Implementing Tank Fillers</h3>
-                    <p>
+                    <h3 id="implement-tank-fillers">Chapter 5: Implementing Tank Fillers</h3>
+                    <p id="implement-tank-fillers-text">
                         At Restigouche Dojo, we believe in the power of positive reinforcement and encouragement to uplift and motivate our young athletes. By implementing "tank fillers" – actions and behaviors that replenish your child's emotional tank – you can create a nurturing and empowering atmosphere where they can thrive.
                     </p>
-                    <p>
+                    <p id="implement-tank-fillers-text-2">
                         Tank fillers can include offering specific and genuine praise, expressing appreciation for their efforts, and actively listening to their thoughts and feelings. By affirming their strengths, validating their experiences, and providing unconditional support, you help foster their self-esteem and resilience.
                     </p>
-                    <p>
+                    <p id="implement-tank-fillers-text-3">
                         Additionally, non-verbal cues such as smiling, nodding, and maintaining eye contact can convey warmth, acceptance, and encouragement. By being present, engaged, and attuned to your child's needs, you demonstrate your unwavering support and belief in their abilities.
                     </p>
-                    <p>
+                    <p id="implement-tank-fillers-text-4">
                         Together, let's fill our dojo with positivity, encouragement, and support, ensuring that every child feels empowered to pursue their martial arts goals with confidence and joy.
                     </p>
                 </div>
             </section>
         </div>
     </div>
-
+    <!-- Language Selection -->
+    <select id="language-selection">
+        <option value="en">English</option>
+        <option value="fr">Français</option>
+    </select>
     <!-- JavaScript -->
     <script src="JS/script6.js"></script>
 </body>
