--- a/parentsguide.html
+++ b/parentsguide.html
@@ -19,6 +19,27 @@
                 <!-- Hamburger Menu -->
                 <input type="checkbox" name="" id="menu-toggle">
                 <div class="hamburger-lines">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Parent's Guide to Supporting Your Young Athlete</title>
+    <!-- CSS Stylesheets -->
+    <link href="style.css" rel="stylesheet">
+    <link href="alternativestyle2.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- NAV BAR AND LOGO -->
+    <div class="wrapper">
+        <nav class="navbar">
+            <div class="navbar-container container">
+                <!-- Hamburger Menu -->
+                <input type="checkbox" name="" id="menu-toggle">
+                <div class="hamburger-lines">
                     <span class="line line1"></span>
                     <span class="line line2"></span>
                     <span class="line line3"></span>
@@ -59,7 +80,7 @@
                 </div>
             </section>
 
-                        <!-- Guide Content -->
+            <!-- Guide Content -->
             <section class="guide">
                 <div class="container">
                     <h3 id="role-in-team">Chapter 1: You're Part of the Team</h3>
@@ -126,11 +147,6 @@
             </section>
         </div>
     </div>
-    <!-- Language Selection -->
-    <select id="language-selection">
-        <option value="en">English</option>
-        <option value="fr">Français</option>
-    </select>
     <!-- JavaScript -->
     <script src="JS/script6.js"></script>
 </body>
