--- a/parentsguide.html
+++ b/parentsguide.html
@@ -46,11 +46,13 @@
     <!-- CONTENT -->
     <div class="content-area">
         <div class="wrapper-body">
-            <!-- Language Selection -->
-            <select id="language-selection">
-                <option value="en">English</option>
-                <option value="fr">Français</option>
-            </select>
+
+<!-- Language Selection -->
+<select id="language-select">
+    <option value="en">English</option>
+    <option value="fr">Français</option>
+</select>
+
 
             <!-- Hero Section -->
             <section class="hero">
