--- a/myfirstjudocompetition.html
+++ b/myfirstjudocompetition.html
@@ -25,12 +25,12 @@
                 </div>
                 <!-- Navigation Menu -->
                 <ul class="menu-items">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="meettheteam.html">Instructors</a></li>
-                    <li><a href="membership.html">Schedule</a></li>
-                    <li><a href="payment.html">Registration</a></li>
-                    <li><a href="photosvideos.html">Media</a></li>
-                    <li><a href="contactus.html">Contact us</a></li>
+                     <li><a href="index.html">Home</a></li>
+                     <li><a href="instructors.html">Instructors</a></li>
+                     <li><a href="schedule.html">Schedule</a></li>
+	                 <li><a href="registration.html">Registration</a></li>
+                     <li><a href="media.html">Media</a></li>
+                     <li><a href="contactus.html">Contact us</a></li>
                     <!-- Google Translate Widget -->
                     <div id="google_translate_element"></div>
                     <script type="text/javascript">
