--- a/parentsguide.html
+++ b/parentsguide.html
@@ -24,13 +24,12 @@
                     <span class="line line3"></span>
                 </div>
                 <!-- Navigation Menu -->
-                <ul class="menu-items">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="meettheteam.html">Instructors</a></li>
-                    <li><a href="membership.html">Schedule</a></li>
-                    <li><a href="payment.html">Registration</a></li>
-                    <li><a href="photosvideos.html">Media</a></li>
-                    <li><a href="contactus.html">Contact us</a></li>
+                     <li><a href="index.html">Home</a></li>
+                     <li><a href="instructors.html">Instructors</a></li>
+                     <li><a href="schedule.html">Schedule</a></li>
+	                 <li><a href="registration.html">Registration</a></li>
+                     <li><a href="media.html">Media</a></li>
+                     <li><a href="contactus.html">Contact us</a></li>
                 </ul>
                 <!-- Logo -->
                 <h1 class="logo">Restigouche Dojo</h1>
