--- a/parentsguide.html
+++ b/parentsguide.html
@@ -24,6 +24,7 @@
                     <span class="line line3"></span>
                 </div>
                 <!-- Navigation Menu -->
+		    <ul class="menu-items">
                      <li><a href="index.html">Home</a></li>
                      <li><a href="instructors.html">Instructors</a></li>
                      <li><a href="schedule.html">Schedule</a></li>
