--- a/myfirstbjjcompetition.html
+++ b/myfirstbjjcompetition.html
@@ -108,6 +108,7 @@
                             <li id="knee-on-belly"><strong>Knee on Belly:</strong> 2 points</li>
                             <li id="passing-guard"><strong>Passing the Guard:</strong> 3 points</li>
                             <li id="mount-position"><strong>Mount Position:</strong> 4 points</li>
+			   <li id="Rear-mount-position"><strong>Rear Mount Position:</strong> 4 points</li>
                         </ul>
                     </p>
 
