--- a/seminar2024.html
+++ b/seminar2024.html
@@ -12,6 +12,12 @@
 <body>
     <header>
         <h1>Restigouche Dojo Presents: A Special BJJ Seminar with Hal MacDonald</h1>
+        <div class="language-selection-container">
+            <select id="language-selection">
+                <option value="en">English</option>
+                <option value="fr">Français</option>
+            </select>
+        </div>
         <a href="index.html" class="back-btn">Back to Main Website</a>
     </header>
 
