--- a/seminar2024.html
+++ b/seminar2024.html
@@ -1,80 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Special BJJ Seminar with Hal MacDonald</title>
-    <link rel="stylesheet" href="alternative4.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <header>
-        <h1>Restigouche Dojo Presents: A Special BJJ Seminar with Hal MacDonald</h1>
-        <div class="language-selection-container">
-            <select id="language-selection">
-                <option value="en">English</option>
-                <option value="fr">Français</option>
-            </select>
-        </div>
-        <a href="index.html" class="back-btn">Back to Main Website</a>
-    </header>
 
-    <div class="container">
-        <section class="hero">
-            <!-- Add a striking banner image of Hal MacDonald or a relevant BJJ image -->
-        </section>
-
-        <section class="section">
-            <h2 class="section-title">About the Seminar</h2>
-            <p class="section-content">
-                Join us for an exclusive seminar at Restigouche Dojo, featuring Hal MacDonald, a distinguished Brazilian Jiu-Jitsu Black Belt from our lineage. With decades of experience in martial arts, including Muay Thai and professional boxing, Hal has competed in and won several international championships, including multiple gold medals at the World Master IBJJF Jiu-Jitsu Championships.
-            </p>
-            <p class="section-content">
-                Beyond his impressive martial arts credentials, Hal is also renowned for his dedication to philanthropy. He has organized numerous fundraising events, including the remarkable 60x60@60 challenge, which raised $75,000 for Little Warriors, a national charity dedicated to the prevention and treatment of child sexual abuse.
-            </p>
-            <p class="section-content">
-                This seminar offers a unique opportunity to learn from a seasoned practitioner who brings a wealth of knowledge, experience, and a deep passion for the art of Brazilian Jiu-Jitsu. Whether you are a seasoned practitioner or new to the sport, this event will provide valuable insights and techniques that can elevate your practice.
-            </p>
-        </section>
-
-        <section class="section">
-            <h2 class="section-title">Event Details</h2>
-            <ul class="event-details">
-                <li><strong>Date:</strong> October 8th, 2024</li>
-                <li><strong>Time:</strong> [Insert Time]</li>
-                <li><strong>Location:</strong> Restigouche Dojo</li>
-                <li><strong>Registration:</strong> Cash only event</li>
-            </ul>
-        </section>
-
-        <section class="section">
-            <h2 class="section-title">Photo Gallery</h2>
-            <div class="gallery">
-                <!-- Replace the src attributes with the paths to your images -->
-                <img src="image1.jpg" alt="Hal MacDonald Seminar 1" class="gallery-img">
-                <img src="image2.jpg" alt="Hal MacDonald Seminar 2" class="gallery-img">
-                <img src="image3.jpg" alt="Hal MacDonald Seminar 3" class="gallery-img">
-                <img src="image4.jpg" alt="Hal MacDonald Seminar 4" class="gallery-img">
-                <img src="image5.jpg" alt="Hal MacDonald Seminar 5" class="gallery-img">
-                <img src="image6.jpg" alt="Hal MacDonald Seminar 6" class="gallery-img">
-                <img src="image7.jpg" alt="Hal MacDonald Seminar 7" class="gallery-img">
-                <img src="image8.jpg" alt="Hal MacDonald Seminar 8" class="gallery-img">
-            </div>
-        </section>
-
-        <section class="section">
-            <h2 class="section-title">Reserve Your Spot!</h2>
-            <p class="section-content">
-                Don’t miss this chance to train with Hal MacDonald, a highly respected Black Belt who has made significant contributions both on and off the mats. Reserve your spot today!
-            </p>
-        </section>
+<header>
+    <h1>Restigouche Dojo Presents: A Special BJJ Seminar with Hal MacDonald</h1>
+    <div>
+        <label for="language-selection">Language:</label>
+        <select id="language-selection">
+            <option value="en">English</option>
+            <option value="fr">Français</option>
+        </select>
     </div>
+</header>
 
-    <script src="/JS/seminar.js"></script>
-    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<section>
+    <h2 id="about-title">About the Seminar</h2>
+    <p id="about-content">
+        Join us for an exclusive seminar at Restigouche Dojo, featuring Hal MacDonald, a distinguished Brazilian Jiu-Jitsu Black Belt with decades of experience in martial arts, including Muay Thai and professional boxing. Hal has competed in and won several international championships, including multiple gold medals at the World Master IBJJF Jiu-Jitsu Championships.
+    </p>
+</section>
+
+<section>
+    <h2 id="details-title">Event Details</h2>
+    <ul id="details-content">
+        <li><strong>Date:</strong> October 8th, 2024</li>
+        <li><strong>Time:</strong> [Insert Time]</li>
+        <li><strong>Location:</strong> Restigouche Dojo</li>
+        <li><strong>Registration:</strong> Cash only event</li>
+    </ul>
+</section>
+
+<section>
+    <h2 id="gallery-title">Photo Gallery</h2>
+    <div class="gallery">
+        <!-- Add your images here -->
+        <img src="image1.jpg" alt="Seminar Image 1">
+        <img src="image2.jpg" alt="Seminar Image 2">
+        <img src="image3.jpg" alt="Seminar Image 3">
+        <img src="image4.jpg" alt="Seminar Image 4">
+        <img src="image5.jpg" alt="Seminar Image 5">
+        <img src="image6.jpg" alt="Seminar Image 6">
+        <img src="image7.jpg" alt="Seminar Image 7">
+        <img src="image8.jpg" alt="Seminar Image 8">
+    </div>
+</section>
+
+<section>
+    <h2 id="reserve-title">Reserve Your Spot!</h2>
+    <p id="reserve-content">
+        Don’t miss this chance to train with Hal MacDonald, a highly respected Black Belt who has made significant contributions both on and off the mats. Reserve your spot today!
+    </p>
+</section>
+
+<footer>
+    &copy; 2024 Restigouche Dojo
+</footer>
+
+<script src="seminar.js"></script>
 </body>
-
 </html>
