--- a/seminar2024.html
+++ b/seminar2024.html
@@ -27,8 +27,8 @@
         </section>
 
         <section class="section">
-            <h2 class="section-title">About the Seminar</h2>
-            <p class="section-content">
+            <h2 id="about-title" class="section-title">About the Seminar</h2>
+            <p id="about-content" class="section-content">
                 Join us for an exclusive seminar at Restigouche Dojo, featuring Hal MacDonald, a distinguished Brazilian Jiu-Jitsu Black Belt from our lineage. With decades of experience in martial arts, including Muay Thai and professional boxing, Hal has competed in and won several international championships, including multiple gold medals at the World Master IBJJF Jiu-Jitsu Championships.
             </p>
             <p class="section-content">
@@ -40,17 +40,19 @@
         </section>
 
         <section class="section">
-            <h2 class="section-title">Event Details</h2>
-            <ul class="event-details">
-                <li><strong>Date:</strong> October 8th, 2024</li>
-                <li><strong>Time:</strong> [Insert Time]</li>
-                <li><strong>Location:</strong> Restigouche Dojo</li>
-                <li><strong>Registration:</strong> Cash only event</li>
-            </ul>
+            <h2 id="details-title" class="section-title">Event Details</h2>
+            <div id="details-content">
+                <ul class="event-details">
+                    <li><strong>Date:</strong> October 8th, 2024</li>
+                    <li><strong>Time:</strong> [Insert Time]</li>
+                    <li><strong>Location:</strong> Restigouche Dojo</li>
+                    <li><strong>Registration:</strong> Cash only event</li>
+                </ul>
+            </div>
         </section>
 
         <section class="section">
-            <h2 class="section-title">Photo Gallery</h2>
+            <h2 id="gallery-title" class="section-title">Photo Gallery</h2>
             <div class="gallery">
                 <!-- Replace the src attributes with the paths to your images -->
                 <img src="image1.jpg" alt="Hal MacDonald Seminar 1" class="gallery-img">
@@ -65,16 +67,16 @@
         </section>
 
         <section class="section">
-            <h2 class="section-title">Reserve Your Spot!</h2>
-            <p class="section-content">
+            <h2 id="reserve-title" class="section-title">Reserve Your Spot!</h2>
+            <p id="reserve-content" class="section-content">
                 Don’t miss this chance to train with Hal MacDonald, a highly respected Black Belt who has made significant contributions both on and off the mats. Reserve your spot today!
             </p>
         </section>
     </div>
     
-<footer>
-    &copy; 2024 Restigouche Dojo
-</footer>
+    <footer>
+        &copy; 2024 Restigouche Dojo
+    </footer>
     
     <script src="/JS/seminar.js"></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -82,3 +84,4 @@
 </body>
 
 </html>
+
