--- a/seminar2024.html
+++ b/seminar2024.html
@@ -55,7 +55,7 @@
             <h2 id="gallery-title" class="section-title">Photo Gallery</h2>
             <div class="gallery">
                 <!-- Replace the src attributes with the paths to your images -->
-                <img src="Photos/Hal.jpg" alt="Hal MacDonald" class="gallery-img">
+                <img src="Photos/Hal.jpg" alt="Hal MacDonald" class="gallery-img" style="max-width: 50%; height: auto; display: block; margin: 0 auto;">
                 <!--
                 <img src="image2.jpg" alt="Hal MacDonald Seminar 2" class="gallery-img">
                 <img src="image3.jpg" alt="Hal MacDonald Seminar 3" class="gallery-img">
