--- a/seminar2024.html
+++ b/seminar2024.html
@@ -52,7 +52,7 @@
         </section>
 
         <section class="section">
-            <h2 id="gallery-title" class="section-title">Photo Gallery</h2>
+            <h2 id="gallery-title" class="section-title">Hal MacDonald</h2>
             <div class="gallery">
                 <!-- Replace the src attributes with the paths to your images -->
                 <img src="Photos/Hal.jpg" alt="Hal MacDonald" class="gallery-img" style="max-width: 65%; height: auto; display: block; margin: 0 auto;">
