--- a/seminar2024.html
+++ b/seminar2024.html
@@ -32,7 +32,7 @@
                 Join us for an exclusive seminar at Restigouche Dojo, featuring Hal MacDonald, a distinguished Brazilian Jiu-Jitsu Black Belt from our lineage. With decades of experience in martial arts, including Muay Thai and professional boxing, Hal has competed in and won several international championships, including multiple gold medals at the World Master IBJJF Jiu-Jitsu Championships.
             </p>
             <p id="about-philanthropy" class="section-content">
-                Beyond his impressive martial arts credentials, Hal is also renowned for his dedication to philanthropy. He has organized numerous fundraising events, including the remarkable 60x60@60 challenge, which raised $75,000 for Little Warriors, a national charity dedicated to the prevention and treatment of child sexual abuse.
+                Beyond his impressive martial arts credentials, Hal is also renowned for his dedication to philanthropy. He has organized numerous fundraising events, including the remarkable 60x60@60 challenge, which raised $75,000 for Little Warriors, a national charity dedicated to the prevention and treatment of child sexual abuse. Additionally, he is the co-creator of the Kids Helping Kids Seminar, an initiative in support of Little Warriors Canada.
             </p>
             <p id="about-value" class="section-content">
                 This seminar offers a unique opportunity to learn from a seasoned practitioner who brings a wealth of knowledge, experience, and a deep passion for the art of Brazilian Jiu-Jitsu. Whether you are a seasoned practitioner or new to the sport, this event will provide valuable insights and techniques that can elevate your practice.
