--- a/registration.html
+++ b/registration.html
@@ -68,9 +68,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2024 season</h2>
                       <p class="people__desc"> Fall block: $195.81
-			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a>
+			       <a href="contactus.html" target="_blank">Join the waitlist now!</a>
 			<br> <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
-			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>
+			       <a href="contactus.html" target="_blank">Join the waitlist now!</a>
 			      
 			    <br><a href="https://restigouchedojo.com/tinytotsinfo.html" target="">Program info</a>
 			  </p>
@@ -88,10 +88,10 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2024 season</h2>
                     <p class="people__desc"> Fall block: $195.81 
-                        <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
+                         <a href="contactus.html" target="_blank">Join the waitlist now!</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
-			      <a href="https://square.link/u/ITi22NJX" target="_blank">Pay now</a>
+			       <a href="contactus.html" target="_blank">Join the waitlist now!</a>
 			<br><a href="https://restigouchedojo.com/kinderjudoinfo.html" target="">Program info</a>
 			</p>
                 </div>
