--- a/instructors.html
+++ b/instructors.html
@@ -77,7 +77,7 @@
             <div class="instructor-card__info">
                 <h3 class="instructor-card__name">Maxime Raymond</h3>
                 <p class="instructor-card__desc">
-                    Judo black belt and BJJ purple belt.<br>
+                    Judo black belt and BJJ brown belt.<br>
                     NCCP# 1073218<br>
                     <a href="blog1.html">More about Maxime</a><br>
                     <a href="achievementsmax.html">Results</a>
