--- a/instructors.html
+++ b/instructors.html
@@ -72,7 +72,7 @@
 
         <div class="instructor-card">
             <div class="instructor-card__image">
-                <img src="Photos/senseimax.jpg" alt="Sensei Maxime">
+                <img src="Photos/IMG-20240906-WA0002~2.jpg" alt="Sensei Maxime">
             </div>
             <div class="instructor-card__info">
                 <h3 class="instructor-card__name">Maxime Raymond</h3>
