--- a/registration.html
+++ b/registration.html
@@ -66,8 +66,8 @@
                       <img src="Photos/pexels-cottonbro-studio-7990073.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">2024 season</h2>
-                      <p class="people__desc"> Fall block: $195.81
+                      <h2 class="people__name">2025 season</h2>
+                      <p class="people__desc"> Winter: $195.81
 			       <a href="contactus.html" target="_blank">Join the waitlist now!</a>
 			<br> <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			       <a href="contactus.html" target="_blank">Join the waitlist now!</a>
@@ -86,8 +86,8 @@
                     <img src="Photos/pexels-cottonbro-studio-7988827.jpg" alt="" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
-                    <h2 class="people__name">2024 season</h2>
-                    <p class="people__desc"> Fall block: $195.81 
+                    <h2 class="people__name">2025 season</h2>
+                    <p class="people__desc"> Winter block: $195.81 
                          <a href="contactus.html" target="_blank">Join the waitlist now!</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
@@ -105,8 +105,8 @@
                       <img src="Photos/pexels-rodnae-productions-7045729.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">2024 season</h2>
-                      <p class="people__desc">Fall block: $257.55
+                      <h2 class="people__name">2025 season</h2>
+                      <p class="people__desc">Winter block: $257.55
                         <a href="contactus.html" target="_blank">Join the waitlist now!</a>
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
